# matching-engine-challenge

./: .gitignore  CMakeLists.txt  README.md  build_bench  build_test
.claude/: settings.local.json
bench/: benchmark.cpp  order_generator.cpp  order_generator.h
include/exchange/: matching_engine.h  types.h
infra/docker/: Dockerfile.bench  Dockerfile.dev  entrypoint.sh  seccomp-profile.json.example
infra/scripts/: create-team-branches.sh  run-pipeline.sh  setup-server.sh
infra/server/: app.py  config.py  models.py  pipeline.py  requirements.txt
infra/terraform/: .gitignore  main.tf  outputs.tf  teardown.sh  terraform.tfvars.example  user-data.sh.tftpl  variables.tf
leaderboard/static/: index.html  reveal.html
leaderboard/static/css/: style.css
leaderboard/static/js/: charts.js  leaderboard.js  reveal.js
reference/: matching_engine.cpp  matching_engine.h
src/: matching_engine.cpp
test/: test_correctness.cpp
